# Algometric-mini-package

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/: algorithms.py  benchmarking.py  data_structures.py  generators.py  main.py
tests/: test_main.py
