[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = false
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "algorithms.*",
    "data_structures.*",
    "generators.*",
    "benchmarking.*"
]
ignore_errors = false
